added background image to body

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 body{
-   background: url("back10.png")
+   background: url("background.jpg")
     
 }
 .clearfix::after {
