--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #212732;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%23212732'/%3E%3Cstop offset='1' stop-color='%23268e7b'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23b1dd76' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23b1dd76' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23b1dd76' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23b1dd76' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
-    background-attachment: fixed;
+    background:linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("background.jpg");
     background-size: cover;
     
 }
@@ -45,7 +43,7 @@ body{
 .top {
     width: 100%;
     height: 40vh;
-    margin-top: 2em;
+    margin-top: 1.95em;
     margin-bottom: 2em;
     position: relative;
 }
